--- a/templates/modal-mypurchase.html
+++ b/templates/modal-mypurchase.html
@@ -1,30 +1,24 @@
 <ion-modal-view>
     <ion-header-bar class="bar-royal">
-        <h1 class="title">My Sale</h1>
+        <h1 class="title">My Purchase</h1>
         <div class="buttons">
-            <button class="button button-clear" ng-click="closesale()">Close</button>
+            <button class="button button-clear" ng-click="closepurchase()">Close</button>
         </div>
     </ion-header-bar>
     <ion-content class="padding">
         <div class="incard">
             <div class="list profile-cont padtop5">
                 <ion-item class="item-left">
-                    <h2>Name</h2>
+                    <h2>Price</h2>
                     <div class="pull-right item-right text-capitalize">
-                        Xperia Z
-                    </div>
-                </ion-item> 
-                     <ion-item class="item-left">
-                    <h2>Email Id</h2>
-                    <div class="pull-right item-right text-capitalize">
-                       osb@osb.gmail.com
+                        7000
                     </div>
                 </ion-item>
 
                 <ion-item class="item-left">
-                    <h2>Prize</h2>
+                    <h2>Quantity</h2>
                     <div class="pull-right item-right text-capitalize">
-                        2000000
+                        20
                     </div>
                 </ion-item>
 
