--- a/templates/modal-mysale.html
+++ b/templates/modal-mysale.html
@@ -9,15 +9,21 @@
         <div class="incard">
             <div class="list profile-cont padtop5">
                 <ion-item class="item-left">
+                    <h2>Date</h2>
+                    <div class="pull-right item-right text-capitalize">
+                        12/4/2015
+                    </div>
+                </ion-item>
+                <ion-item class="item-left">
                     <h2>Name</h2>
                     <div class="pull-right item-right text-capitalize">
                         Xperia Z
                     </div>
-                </ion-item> 
-                     <ion-item class="item-left">
+                </ion-item>
+                <ion-item class="item-left">
                     <h2>Email Id</h2>
                     <div class="pull-right item-right text-capitalize">
-                       osb@osb.gmail.com
+                        osb@osb.gmail.com
                     </div>
                 </ion-item>
 
@@ -29,36 +35,13 @@
                 </ion-item>
 
                 <ion-item class="item-left">
-                    <h2>SKU</h2>
+                    <h2>Transition Id</h2>
                     <div class="pull-right item-right text-capitalize">
                         4565465465
                     </div>
                 </ion-item>
-
-                <ion-item class="item-left">
-                    <h2>Category</h2>
-                    <div class="pull-right item-right text-capitalize">
-                        546544654
-                    </div>
-                </ion-item>
-
-                <ion-item class="item-left">
-                    <h2>Status</h2>
-                    <div class="pull-right item-right text-capitalize">
-                        Avaliable
-                    </div>
-                </ion-item>
-
-                <div class="item item-input item-text-wrap header">
-                    <h2>Description</h2>
-                </div>
-
-                <div class="item item-input item-text-wrap">
-                    <div class="input itemproducts">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                    </div>
-                </div>
             </div>
+        </div>
 
         </div>
     </ion-content>
