--- a/templates/shop.html
+++ b/templates/shop.html
@@ -12,7 +12,6 @@
                     <div class="pull-right balanced amount">
                         {{profile.salesbalance}}
                     </div>
-
                 </ion-item>
             </ion-list>
             <ion-item class="item-left">
@@ -85,7 +84,7 @@
             <div class="item item-input item-text-wrap itemimage">
                 <div class="input-div" ng-repeat="i in img">
 <!--                    <button class="button" ng-click="openshops();">-->
-                    <a class="button" href="#/app/productdetail">
+                    <a class="button border-none" href="#/app/productdetail">
                         <img ng-src="{{i.photo|serverimage}}" class="full-image">
                     </a>
                 </div>
