--- a/templates/buydetails.html
+++ b/templates/buydetails.html
@@ -2,7 +2,7 @@
     <ion-content class="padding">
         <div class="incard">
             <div class="profile-img">
-                <img ng-src="img/icon.png">
+                <img ng-src="img/1.jpg">
                 <h3>Xperia Z</h3>
             </div>
             <div class="list profile-cont padtop5">
@@ -49,10 +49,9 @@
                     </div>
                 </div>
             </div>
-            <div class="padding-horizontal">
-                <button class="button button-block button-outline button-balanced" ng-click="openform()">Buy Now</button>
-
-            </div>
         </div>
     </ion-content>
+    <ion-footer-bar class="footer-shop ion-item balanced" ng-click="openform()">
+       <h4>Buy Now</h4> 
+    </ion-footer-bar>
 </ion-view>
