--- a/templates/menu.html
+++ b/templates/menu.html
@@ -24,7 +24,7 @@
                     <span>My Profile</span>
                 </ion-item>
                 <ion-item nav-clear menu-close href="#/app/myproducts">
-                    <span>My Product</span>
+                    <span>My Products</span>
                 </ion-item>
                 
                 <ion-item nav-clear menu-close href="#/app/orders">
