--- a/templates/orders.html
+++ b/templates/orders.html
@@ -3,10 +3,10 @@
     <div class="tabs-striped tabs-top tabs-background-royal tabs-color-light">
         <div class="tabs">
             <a class="tab-item" ng-click="tabvalue = 1;"  ng-class="{'active': tabvalue == 1}">
-        My Purchases
+        My Purchase
       </a>
             <a class="tab-item" ng-click="tabvalue = 2;" ng-class="{'active': tabvalue == 2}">
-        My Sales
+        My Sale
       </a>
         </div>
     </div>
@@ -16,16 +16,16 @@
                 <!--                <div class="item item-thumbnail-left bod-bottom" ng-repeat="o in ordr">-->
                 <div class="item item-thumbnail-left" ng-click="openpurchase();">
                     <img src="img/icon.png">
-                    <h2 class="leftnames">Name: <span>Xperia U</span></h2>
-                    <h2 class="leftnames">Price: <span>8000</span></h2>
-                    <h2 class="leftnames">Transaction ID: <span>78787989</span></h2>
+                    <h3 class="leftnames">Name: <span>Xperia U</span></h2>
+                    <h3 class="leftnames">Price: <span>8000</span></h3>
+                    <h3 class="leftnames">Transaction ID: <span>78787989</span></h3>
                 </div>
                 <!--
                    <div class="item item-thumbnail-left bod-bottom" ng-repeat="o in ordr">
                     <img ng-src="{{o.productimage|serverimage}}">
-                    <h2 class="leftnames">Name: <span>{{o.productname}}</span></h2>
-                    <h2 class="leftnames">Price: <span>{{o.price}}</span></h2>
-                    <h2 class="leftnames">Transaction ID: <span>{{o.transactionid}}</span></h2>
+                    <h3 class="leftnames">Name: <span>{{o.productname}}</span></h3>
+                    <h3 class="leftnames">Price: <span>{{o.price}}</span></h3>
+                    <h3 class="leftnames">Transaction ID: <span>{{o.transactionid}}</span></h3>
                 </div>
 -->
             </div>
@@ -34,9 +34,9 @@
                 <!--                <div class="item item-thumbnail-left bod-bottom" ng-repeat="o in ordr">-->
                 <div class="item item-thumbnail-left" ng-click="opensale();">
                     <img src="img/icon.png">
-                    <h2 class="leftnames">Name: <span>Xperia U</span></h2>
-                    <h2 class="leftnames">Price: <span>8000</span></h2>
-                    <h2 class="leftnames">Transaction ID: <span>78787989</span></h2>
+                    <h3 class="leftnames">Name: <span>Xperia U</span></h3>
+                    <h3 class="leftnames">Price: <span>8000</span></h3>
+                    <h3 class="leftnames">Transaction ID: <span>78787989</span></h3>
                 </div>
             </div>
         </div>
