--- a/templates/home.html
+++ b/templates/home.html
@@ -60,7 +60,7 @@
 
         </div>
         <div class="button-bar">
-            <a class="button button-outline button-royal" ng-class="{'active': tabvalue == 1}" ng-click="tabvalue = 1;">Online</a>
+            <a class="button button-outline button-royal"  ng-click="tabvalue = 1;" ng-class="{'active': tabvalue == 1}">Online</a>
             <!--                <a class="button button-outline button-royal" ng-click="offline()" ng-class="offlineclass">Offline</a>  -->
             <a class="button button-outline button-royal" ng-click="tabvalue = 2;" ng-class="{'active': tabvalue == 2}">Offline</a>
         </div>
