--- a/templates/product.html
+++ b/templates/product.html
@@ -49,9 +49,11 @@
             <div class="header-card">Products</div>
             <div class="row productsCol" ng-repeat="sp in spr">
                 <div class="col col-33 text-center" ng-repeat="s in sp" ng-click="getproduct(s.productid)">
+                   <a href="#/app/productdetail">
                     <img ng-src={{s.image|serverimage}} class="full-image">
-                    <h5>{{s.name}}</h5>
+                    <h5 class="bold">{{s.name}}</h5>
                     <h5>{{s.price}}</h5>
+                    </a>
                 </div>
             </div>
 <!--
