--- a/templates/shop.html
+++ b/templates/shop.html
@@ -83,10 +83,11 @@
             </div>
             <div class="item item-input item-text-wrap itemimage">
                 <div class="input-div" ng-repeat="i in img">
-<!--                    <button class="button" ng-click="openshops();">-->
-                    <a class="button border-none" href="#/app/productdetail">
+                    <button class="button" ng-click="openshops();">
+<!--                    <a class="button border-none" href="#/app/productdetail">-->
                         <img ng-src="{{i.photo|serverimage}}" class="full-image">
-                    </a>
+<!--                    </a>-->
+                    </button>
                 </div>
 
             </div>
