--- a/css/style.css
+++ b/css/style.css
@@ -897,3 +897,8 @@ h5.bold {
 input.pull-right {
     text-align: right;
 }
+
+.list.prd-form span {
+    font-weight: 700;
+    font-size: 14px;
+}
