--- a/templates/home.html
+++ b/templates/home.html
@@ -126,7 +126,7 @@
                         City
                     </div>
                     <select ng-model="home.area">
-<!--                        <option value="">Mumbai</option>-->
+                        <option value="">Mumbai</option>
                                                 <option ng-repeat="areas in user.area" value="{{areas.id}}">{{areas.name}}</option>
                     </select>
                 </label>
