--- a/templates/home.html
+++ b/templates/home.html
@@ -136,7 +136,7 @@
                         Area
                     </div>
                     <select ng-model="home.area">
-<!--                        <option value="">Sion</option>-->
+                        <option value="">All</option>
                                                 <option ng-repeat="areas in user.area" value="{{areas.id}}">{{areas.name}}</option>
                     </select>
                 </label>
