--- a/templates/buydetails.html
+++ b/templates/buydetails.html
@@ -7,6 +7,12 @@
             </div>
             <div class="list profile-cont padtop5">
                 <ion-item class="item-left">
+                    <h2>Shop</h2>
+                    <div class="pull-right item-right text-capitalize">
+                        Croma
+                    </div>
+                </ion-item>
+                <ion-item class="item-left">
                     <h2>Price</h2>
                     <div class="pull-right item-right text-capitalize">
                         7000
@@ -48,10 +54,15 @@
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </div>
                 </div>
+                <div class="padding-horizontal">
+                    <a class="button button-block button-outline button-balanced" href="#/app/dealerprd">
+                View More Products
+            </a>
+                </div>
             </div>
         </div>
     </ion-content>
     <ion-footer-bar class="footer-shop ion-item balanced" ng-click="openform()">
-       <h4>Buy Now</h4> 
+        <h4>Buy Now</h4>
     </ion-footer-bar>
 </ion-view>
