--- a/templates/modal-form.html
+++ b/templates/modal-form.html
@@ -33,6 +33,9 @@
                     </div>
                     <div class="item item-input text-capitalize">
                         <input type="text" placeholder="Pincode">
+                    </div>   
+                        <div class="item item-input text-capitalize">
+                        <input type="text" placeholder="Logistics Charges">
                     </div>
                 </div>
             </form>
@@ -52,6 +55,7 @@
                 <div class="header-card">Shipping Information</div>
                 <form ng-submit="">
                     <div class="list buy-form">
+<!--
                         <div class="item item-input text-capitalize">
                             <input type="text" placeholder="Name">
                         </div>
@@ -61,6 +65,7 @@
                         <div class="item item-input">
                             <input type="tel" placeholder="Phone Number">
                         </div>
+-->
                         <div class="item item-input text-capitalize">
                             <textarea placeholder="Address"></textarea>
                         </div>
