--- a/templates/modal-mysale.html
+++ b/templates/modal-mysale.html
@@ -28,7 +28,7 @@
                 </ion-item>
 
                 <ion-item class="item-left">
-                    <h2>Prize</h2>
+                    <h2>Price</h2>
                     <div class="pull-right item-right text-capitalize">
                         2000000
                     </div>
