--- a/templates/addbalance.html
+++ b/templates/addbalance.html
@@ -1,5 +1,5 @@
 <ion-modal-view view-title="Add Balance">
-    <ion-header-bar class="bar-royal">
+    <ion-header-bar class="bar-royal" align-title="center">
         <h1 class="title">Add Balance</h1>
         <div class="buttons">
             <button class="button button-clear" ng-click="closeModal()">Close</button>
