--- a/templates/popsearch.html
+++ b/templates/popsearch.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-    <ion-header-bar class="bar-royal">
+    <ion-header-bar class="bar-royal" align-title="center">
         <h1 class="title"> Membership No.</h1>
         <div class="buttons">
             <button class="button button-clear" ng-click="closeModal()">Close</button>
