--- a/templates/productdetails.html
+++ b/templates/productdetails.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-    <ion-header-bar class="bar-royal">
+    <ion-header-bar class="bar-royal" align-title="center">
         <div class="buttons">
             <button class="button button-clear" ng-click="closeprdtdetails()">Close</button>
         </div>
