--- a/templates/buydetails.html
+++ b/templates/buydetails.html
@@ -1,68 +1,69 @@
 <ion-view view-title="My Product Details">
-    <ion-content class="padding">
-        <div class="incard">
-            <div class="profile-img">
-                <img ng-src="img/1.jpg">
-                <h3>Xperia Z</h3>
-            </div>
-            <div class="list profile-cont padtop5">
-                <ion-item class="item-left">
-                    <h2>Shop</h2>
-                    <div class="pull-right item-right text-capitalize">
-                        Croma
-                    </div>
-                </ion-item>
-                <ion-item class="item-left">
-                    <h2>Price</h2>
-                    <div class="pull-right item-right text-capitalize">
-                        7000
-                    </div>
-                </ion-item>
+	<ion-content class="padding">
+		<div class="incard">
+			<div class="profile-img">
+				<img ng-src="img/1.jpg">
+				<h3>Xperia Z</h3>
+			</div>
+			<div class="list profile-cont padtop5">
+				<ion-item class="item-left">
+					<h2>Price</h2>
+					<div class="pull-right item-right text-capitalize">
+						7000
+					</div>
+				</ion-item>
 
-                <ion-item class="item-left">
-                    <h2>Quantity</h2>
-                    <div class="pull-right item-right text-capitalize">
-                        20
-                    </div>
-                </ion-item>
+				<ion-item class="item-left">
+					<h2>Quantity</h2>
+					<div class="pull-right item-right text-capitalize">
+						20
+					</div>
+				</ion-item>
 
-                <ion-item class="item-left">
-                    <h2>SKU</h2>
-                    <div class="pull-right item-right text-capitalize">
-                        4565465465
-                    </div>
-                </ion-item>
-                <ion-item class="item-left">
-                    <h2>Category</h2>
-                    <div class="pull-right item-right text-capitalize">
-                        546544654
-                    </div>
-                </ion-item>
+				<ion-item class="item-left">
+					<h2>SKU</h2>
+					<div class="pull-right item-right text-capitalize">
+						4565465465
+					</div>
+				</ion-item>
+				<ion-item class="item-left">
+					<h2>Category</h2>
+					<div class="pull-right item-right text-capitalize">
+						546544654
+					</div>
+				</ion-item>
 
-                <ion-item class="item-left">
-                    <h2>Status</h2>
-                    <div class="pull-right item-right text-capitalize">
-                        Avaliable
-                    </div>
-                </ion-item>
-
-                <div class="item item-input item-text-wrap header">
-                    <h2>Description</h2>
-                </div>
-                <div class="item item-input item-text-wrap">
-                    <div class="input itemproducts">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                    </div>
-                </div>
+				<ion-item class="item-left">
+					<h2>Status</h2>
+					<div class="pull-right item-right text-capitalize">
+						Avaliable
+					</div>
+				</ion-item>
+				<ion-item class="item-left" href="#/app/dealerprd">
+					<h2>Shop</h2>
+					<div class="pull-right item-right text-capitalize">
+						Croma
+					</div>
+				</ion-item>
+				<div class="item item-input item-text-wrap header">
+					<h2>Description</h2>
+				</div>
+				<div class="item item-input item-text-wrap">
+					<div class="input itemproducts">
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+					</div>
+				</div>
+				<!--
                 <div class="padding-horizontal">
                     <a class="button button-block button-outline button-balanced" href="#/app/dealerprd">
                 View More Products
             </a>
                 </div>
-            </div>
-        </div>
-    </ion-content>
-    <ion-footer-bar class="footer-shop ion-item balanced" ng-click="openform()">
-        <h4>Buy Now</h4>
-    </ion-footer-bar>
+-->
+			</div>
+		</div>
+	</ion-content>
+	<ion-footer-bar class="footer-shop ion-item balanced" ng-click="openform()">
+		<h4>Buy Now</h4>
+	</ion-footer-bar>
 </ion-view>
